# porcupine

./: .gitignore  Makefile  PLAN.md  README.md  TIMELINE.md  WALKTHROUGH.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
install/: 1_install.sh  2_test.sh  3_enable.sh  check.sh  enable.sh  install.sh  porcupine  porcupine.conf.example  porcupine.service  setup.sh  sysinfo.sh  test.sh  test_hardware.py  uninstall.sh
porcupine/: config.py  daemon.py  fan_control.py  main.py
porcupine/interfaces/: button.py  button_controller.py  buzzer.py  lcd.py
porcupine/monitors/: base.py  boot.py  boot_monitor.py  connectivity.py  connectivity_monitor.py  cpu_mem.py  cpu_mem_monitor.py  disk.py  disk_monitor.py  gpio_monitor.py  gpio_pins.py  network.py  network_monitor.py  power.py  power_monitor.py  temperature.py  temperature_monitor.py  wifi.py  wifi_monitor.py
tests/: test_config.py  test_daemon.py  test_fan_control.py  test_smoke.py
tests/interfaces/: test_button.py  test_button_controller.py  test_buzzer.py  test_lcd.py
tests/monitors/: test_connectivity.py  test_cpu_mem.py  test_disk.py  test_gpio_pins.py  test_network.py  test_power.py  test_temperature.py  test_wifi.py
