[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "porcupine"
version = "0.1.0"
description = "Raspberry Pi system monitor with LCD, button, and buzzer interfaces"
requires-python = ">=3.9"
dependencies = [
    "psutil>=5.9",
    "RPi.GPIO>=0.7",
    "RPLCD>=1.3",
    "smbus2>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["porcupine*"]

[project.scripts]
porcupine     = "porcupine.main:main"
porcupine-fan = "porcupine.fan_control:main"
